--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -5,11 +5,9 @@
 
   <div class="custom-btn-container">
       <div class="top-bar">
-
-        <!-- <button class="filter-btn">
-          <i class="fas fa-sliders-h"></i> Filters
-        </button> -->
-        <%= render 'filter_button' %>
+        <%= link_to issues_path(show_filters: true), class: "filter-btn" do %>
+          <i class="fas fa-sliders-h"></i> Advanced Filters
+        <% end %>
 
         <div class="search-container">
           <%= form_with(url: issues_path, method: :get, local: true, class: "search-form") do |f| %>
@@ -20,8 +18,10 @@
             <% if params[:direction].present? %>
               <%= f.hidden_field :direction, value: params[:direction] %>
             <% end %>
+            <button type="submit" class="search-button">
+              <i class="fas fa-search"></i>
+            </button>
           <% end %>
-          <i class="fas fa-search search-icon"></i>
         </div>
 
         <div class="custom-btn-container">
@@ -35,6 +35,73 @@
         </div>
       </div>
   </div>
+
+  <% if params[:show_filters] == "true" %>
+  <div id="advanced-filters" class="advanced-filters mt-3 p-3 border rounded">
+    <h4>Filtros Avanzados</h4>
+    <%= form_with(url: issues_path, method: :get, local: true, class: "advanced-filter-form") do |f| %>
+      <%= f.hidden_field :show_filters, value: "true" %>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :titulo, "Título" %>
+            <%= f.text_field :titulo, value: params[:titulo], class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :descripcion, "Descripción" %>
+            <%= f.text_field :descripcion, value: params[:descripcion], class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :status_id, "Estado" %>
+            <%= f.collection_select :status_id, @status_options, :id, :name, { include_blank: "Todos" }, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :priority_id, "Prioridad" %>
+            <%= f.collection_select :priority_id, @priority_options, :id, :name, { include_blank: "Todas" }, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :issue_type_id, "Tipo" %>
+            <%= f.collection_select :issue_type_id, @type_options, :id, :name, { include_blank: "Todos" }, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :severity_id, "Severidad" %>
+            <%= f.collection_select :severity_id, @severity_options, :id, :name, { include_blank: "Todas" }, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :user_id, "Creado por" %>
+            <%= f.collection_select :user_id, @user_options, :id, :email, { include_blank: "Todos" }, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :assignee_id, "Asignado a" %>
+            <%= f.collection_select :assignee_id, @user_options, :id, :email, { include_blank: "Todos" }, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-md-12 text-center">
+          <%= f.submit "Aplicar Filtros", class: "btn btn-primary" %>
+          <%= link_to "Ocultar Filtros", issues_path, class: "btn btn-secondary ml-2" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <% end %>
 </div>
 
   <% if @issues.any? %>
